 4.Property: Prop_LanguageSpeaker
 5.INI entry: WIZLISTMASK -- WIZLIST command modified to support it.
 6.MUDGrinder Map editor now has a Scripts editor button on the map screen.
 7.Internal: Lots of refactoring done. Lots.
 8.INI entries: OBJSPERTHREAD, TICKTIME, MILLISPERMUDHOUR -- control time and thread spawning!
 9.Web & SMTP server INI files have some tweeking options for performance (MAXTHREADS/REQUESTTIMEOUTMINS)
10.New Scriptable Commands: MPPOSSESS, MPSETINTERNAL
11.MERGE command can now be used to merge different database instances of areas/rooms/etc..
12.Ability INI entries: MAXCOMMONSKILLS, MAXCRAFTINGSKILLS, MAXNONCRAFTINGSKILLS, MAXLANGUAGES, WALKCOST, RUNCOST
13.Added an all-skills configuration file: /resources/skills/allqualifylist
14.IP service (CM1Server) -- a new, more formal-syntax mud interface -- see guides/CM1ServerGuide.html
15.DISABLE flag: LOGOUTS (keeps characters in game world even if they log out)
16.Another playable race: Duergar
17.Apprentice can now play only level 1 -- we had too many people playing all the way to 5 and regretting it.
18.IMPORT now supports areatype parameter for converting to different types.
19.MODIFY [TYPE] [NAME] [STAT] [VALUE] command syntax has had first expansion since CM 1.0!
20.CLAN ROLEs renumbered.  System will fix some deprecated values, but enchanters/treasurers will be confused.
21.ACT_PROG P clarified in the Scriptable document.
22.New DISABLE flags: DARKNIGHTS, DARKWEATHER
23.EMAILREQ can now be set to disabled.
24.FakeDB now supports PreparedStatements, and Apache Derby support is now complete.
25.Skill Recipes: Skill Component entries can now be substituted for ingredient amount in skill recipes.
26.WebMacro NumPlayers supports ALL, TOTAL, TOTALCACHED, and ACCOUNTS.  See Web Guide for more info.
27.New command: POSE, with new filter INI entry for it: POSEFILTER
28.Old accounts will now be purged when they run out of characters. See INI entry: ACCOUNTPURGE